--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,9 +1,82 @@
 html{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(216, 21, 21, 0.733);
+    background-color: #151515;
 }
 
 .container{
     max-width: 1110px;
-    background-color: #ddd;
+    background-color: #FFFFFF;
+    position: relative;
+    margin: 50px auto;
+    padding: 20px 50px;
+}   
+
+.bold{
+    font-weight: bold;
+}
+
+/* Header */
+
+.header{
+    text-align: center;
+}
+
+.main-title{
+    font-size: 40px;
+}
+
+.main-paragraf{
+    font-style: italic;
+}
+
+/* Imagem destaque */
+
+.img-banda{
+    text-align: center;
+    margin-top: 30px;
+}
+
+/* Biografia */
+
+.biografia-container{
+    padding: 25px 0;
+    margin: 25px 0;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+}
+
+/* Citações */
+
+.quotes-container{
+    background-color: #c5bdbd;
+    padding: 30px;
+}
+
+.quotes-container blockquote{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.quotes-container p{
+    font-style: italic;
+}
+
+/* Curiosidades */
+
+.curiosities-container{
+    padding: 25px 0;
+    margin: 25px 0;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px dashed #ddd;
+}
+
+.curiosities-container li{
+    height: 70px;
+}
+
+/* Imagem bold */
+
+.img-bold{
+    font-weight: bold;
+    text-align: center;
 }
